[package]
name = "proton-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
ical = "0.11"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.23"
clap_complete = "4.6.0"
serde_yaml = "0.9.34"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
